--- a/frontend/css/match.css
+++ b/frontend/css/match.css
@@ -1,4 +1,5 @@
 @import url("component/header.css");
+@import url("component/footer.css");
 :root {
    /* ... (keep existing variables) ... */
    --primary-color: #0d1472;
