--- a/frontend/css/welcome.css
+++ b/frontend/css/welcome.css
@@ -1,4 +1,5 @@
-
+@import url("component/header.css");
+@import url("component/footer.css");
 :root {
     --primary-color: #0d1472;
     --secondary-color: #f0f4ff;
